# artiq-zynq

./: .gitignore  hp_dma.py  load.py  maxi_dma.py  run.py  test_hp_dma.py  test_maxi_dma.py  test_rtio_dma.py  zedboard.py
experiments/: dds_timing.py  device_db.py  mandelbrot.py  minimal.py  ttl.py  wall_time.py
firmware/libboard_misoc/: Cargo.toml  lib.rs  uart.rs  uart_console.rs
firmware/libksupport/: ._eh.rs  Cargo.toml  api.rs  build.rs  eh.rs  glue.c  lib.rs  rtio.rs
firmware/libunwind-rs/: Cargo.toml  build.rs  lib.rs  libunwind.rs
firmware/runtime/: Cargo.toml  Makefile  build.rs  lscript.ld  main.rs  startup.S  translation_table.S
