[package]
name = "ksupport"
version = "0.1.0"
authors = ["cjb <cjb>"]


[build-dependencies]
cc = "1.0"

[dependencies]
board_misoc = { path = "../libboard_misoc"}
cslice = { version = "0.3" }
unwind = { path = "../libunwind-rs" }
libc = { default-features = false }
volatile_cell = "1.0"

[lib]
path="lib.rs"
name = "ksupport"

